--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="images/telefone.png" alt="Telefone tocando">
+            <img src="telefone.png" alt="Telefone tocando">
             <h1>Agenda de Contatos</h1>
         </header>
         <form id="form-agenda">
